# borg-hive

./: .env  .gitignore  .pylintrc  .readthedocs.yaml  Dockerfile.base  Dockerfile.borg  README.rst  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/workflows/: ci.yml
borg/: init.sh  requirements.in  requirements.txt  sshd_config
docs/: conf.py  requirements.in  requirements.txt
scripts/: init.sh
src/api/: apps.py
src/api/lib/: serializers.py  viewsets.py
src/api/serializers/: key.py  repo.py  user.py
src/api/tests/: test_key.py  test_repo.py
src/api/urls/: base.py  schema.py
src/api/views/: key.py  repo.py  user.py
src/borghive/: admin.py  apps.py  managers.py  mixins.py  signals.py  urls.py
src/borghive/exceptions/: repository.py
src/borghive/forms/: alert.py  base.py  key.py  notification.py  repository.py
src/borghive/lib/: keys.py  notification.py  rules.py  user.py  validators.py
src/borghive/migrations/: 0001_initial.py  0002_append_only.py  0003_repo_mode.py  0004_stats_unit.py  0005_alter_alertpreference_id_alter_notification_id_and_more.py  0006_pagerdutynotification.py
src/borghive/models/: base.py  key.py  ldap.py  notification.py  repository.py
src/borghive/tasks/: alert.py  repo.py
src/borghive/templatetags/: helpers.py
src/borghive/tests/: test_cmd.py  test_error.py  test_key.py  test_lib.py  (+3 more)
src/core/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
(+18 files in other folders)
