[project]
name = "borg-hive"
version = "0.1.0"
description = "a management interface for borgbackup repositories"
readme = "README.rst"
requires-python = ">=3.10"
dependencies = [
    "celery==5.2.3",
    "django==3.2.16",
    "django-celery-beat==2.2.1",
    "django-crispy-forms==1.14.0",
    "django-extensions==3.1.5",
    "django-ldapdb==1.5.1",
    "django-login-required-middleware==0.7.0",
    "django-polymorphic==3.1.0",
    "djangorestframework==3.13.1",
    "djangorestframework-queryfields==1.0.0",
    "environs==9.5.0",
    "inotify==0.2.10",
    "mariadb==1.1.13",
    "pyyaml==6.0",
    "redis==4.1.2",
    "requests==2.27.1",
    "rules==3.1",
    "sshpubkeys==3.3.1",
    "uritemplate==4.1.1",
]

[dependency-groups]
dev = [
    "coverage==7.10.6",
    "pylama==8.4.1",
    "pylint-django==2.6.1",
]
